[package]
name = "kablam"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
crossbeam = "0.8"
crossterm = "0.25"
fst = { version = "0.4", features = ["levenshtein"] }
libc = "0.2"
mdstream = "0.2.0"
ratatui = { version = "0.30.0", features = ["crossterm", "unstable-rendered-line-info"] }
serde_json = "1"
syntect = "5.3.0"
tokio = { version = "1.49", features = ["io-std", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
mistral-cuda = ["mistralrs/cuda"]
mistral-metal = ["mistralrs/metal"]

[target.'cfg(target_os = "macos")'.dependencies]
mistralrs = { version = "0.8.1", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
mistralrs = "0.8.1"
